syntax = "proto3";

package com.lodny.rwcommon.grpc;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.tag";

service Tag {
  rpc registerTags (GrpcRegisterTagsRequest) returns (Empty);
  rpc getTopTagStrings (GrpcTopTagStringsRequest) returns (GrpcTagStringsResponse);
  rpc getTagStringsByArticleId (GrpcArticleIdRequest) returns (GrpcTagStringsResponse);
  rpc getArticleIdsByTagString (GrpcArticleIdsByTagStringRequest) returns (GrpcArticleIdsByTagStringResponse);
  rpc deleteTagsByArticleId (GrpcArticleIdRequest) returns (Empty);
}


message GrpcRegisterTagsRequest {
  int64 articleId = 1;
  repeated string tagString = 2;
}


message GrpcTopTagStringsRequest {
  int32 count = 1;
}

message GrpcTagStringsResponse {
  repeated string tagString = 1;
}

message GrpcArticleIdsByTagStringRequest {
  string tagString = 1;
}

message GrpcArticleIdsByTagStringResponse {
  repeated int64 articleId = 1;
}

